# Agrisight-live

./: README.md
agrisight-live/: LICENSE  Makefile  README.md
agrisight-live/backend/: README_BACKEND.md  docker-compose.yml  pyproject.toml
agrisight-live/backend/app/: main.py
agrisight-live/backend/app/api/: routes.py  schema.py
agrisight-live/backend/app/core/: config.py  gemini_client.py
agrisight-live/backend/app/data/: disease_environment_rules.json  disease_growth_parameters.json  treatment_knowledge_base.json  yield_models.json
agrisight-live/backend/app/dev/: demo_mode.py  mock_outbreak_data.py
agrisight-live/backend/app/services/: annotation.py  cache_manager.py  disease_progression_engine.py  farm_memory_engine.py  microclimate_risk_engine.py  outbreak_heatmap_engine.py  outbreak_intelligence_engine.py  satellite_analysis_engine.py  satellite_client.py  session_manager.py  treatment_optimizer.py  video_field_scan_engine.py  weather_client.py  yield_estimator.py
agrisight-live/backend/app/tests/: test_disease_progression.py  test_farm_memory_engine.py  test_heatmap_engine.py  test_microclimate_engine.py  test_offline_mode.py  test_outbreak_engine.py  test_routes.py  test_satellite_engine.py  test_treatment_optimizer.py  test_video_scan_engine.py  test_voice_assistant.py  test_yield_estimator.py
agrisight-live/backend/sample_data/plant_village_sample/: manifest.csv
agrisight-live/backend/sample_demo_data/: README.txt
agrisight-live/devops/: cloudbuild.yaml  gcloud-deploy.sh
agrisight-live/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  (+1 more)
(+35 files in other folders)
